<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/hotelreserv_ation_action_bar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/user_activity_image"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户名:"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="20dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="年  龄:" />

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="性  别:" />

            <TextView
                android:id="@+id/tv_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/tv_tell"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shouji"
            android:layout_marginTop="10dp"
             />

        <TextView
            android:id="@+id/tv_bangding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bangding"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/zilao"
            android:layout_marginTop="10dp"

            />

        <TextView
            android:id="@+id/tv_ziliao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ziliao"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chongzhi"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/tv_mima"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mima"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dingdan1"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/tv_dingdan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dingdan"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qingchu"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/tv_neicun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/neicun"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qingchusd"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/tv_sd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SDka"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/about"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guanyu"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tuichu"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/tv_tuichu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="退出登录"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"/>

    </LinearLayout>









</LinearLayout>
